--- a/util/.classpath
+++ b/util/.classpath
@@ -35,5 +35,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/H2/bin/h2-2.1.210.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
